BANG-1351: Add links to the rollover table.
